<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text= "@string/speechText" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.newventuresoftware.waveform.WaveformView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:mode="PLAYBACK"
                app:waveformStrokeThickness="3"
                app:waveformColor="#e5dc33"
                app:waveformFillColor="#e93519"
                android:background="#000000"
                android:id="@+id/playbackWaveformView" />

            <FrameLayout
                android:id="@+id/seekbar_placeholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ToggleButton
            android:id="@+id/recordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_recording"
            android:textOff="@string/start_recording"
            android:textOn="@string/stop_recording" />

        <Button
            android:id="@+id/playBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_playing" />

        <Button
            android:id="@+id/addBleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_beep"/>

        <Button
            android:id="@+id/rmvBleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rmv_beep"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"/>

        </LinearLayout>




        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="top"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-1230113270016669/3510330487">

        </com.google.android.gms.ads.AdView>




    </LinearLayout>





</LinearLayout>


